added empty account deletion activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".HomePage"></activity>
+        <activity android:name=".Account_Deletion"></activity>
+        <activity android:name=".Email_Update" />
+        <activity android:name=".ProfileSettings" />
+        <activity android:name=".HomePage" />
         <activity android:name=".Registration" />
         <activity android:name=".MainActivity">
             <intent-filter>
