--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".UploadProfilePicture"></activity>
+        <activity android:name=".Password_Update"></activity>
+        <activity android:name=".UploadProfilePicture" />
         <activity android:name=".Account_Deletion" />
         <activity android:name=".Email_Update" />
         <activity android:name=".ProfileSettings" />
