--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".ChallengeNavigation"></activity>
+        <activity android:name=".Challenge3DGeometry"></activity>
+        <activity android:name=".ChallengeCharacterDesign" />
+        <activity android:name=".ChallengeLandscape" />
+        <activity android:name=".ChallengeNavigation" />
         <activity android:name=".Password_Update" />
         <activity android:name=".UploadProfilePicture" />
         <activity android:name=".Account_Deletion" />
