added empty daily challenge main navigation activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".Challenge3DGeometry"></activity>
+        <activity android:name=".DailyChallengeMain"></activity>
+        <activity android:name=".Challenge3DGeometry" />
         <activity android:name=".ChallengeCharacterDesign" />
         <activity android:name=".ChallengeLandscape" />
         <activity android:name=".ChallengeNavigation" />
