--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a6001cem_artapp">
+    package="com.example.a6001cem_artapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -12,8 +12,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".DailyChallengeViewPosts"></activity>
+        android:theme="@style/Theme.6001CEM_ArtApp" >
+        <activity android:name=".DailyChallengeViewPosts" >
+        </activity>
         <activity android:name=".DailyChallengeUploadPost" />
         <activity android:name=".DailyChallengeMain" />
         <activity android:name=".Challenge3DGeometry" />
@@ -27,7 +28,7 @@
         <activity android:name=".ProfileSettings" />
         <activity android:name=".HomePage" />
         <activity android:name=".Registration" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
