moved activities related to the random challenges to an appropriately named package

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,16 +27,16 @@
             android:name=".DailyChallengeMain"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Challenge3DGeometry"
+            android:name=".randomChallgenges.Challenge3DGeometry"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ChallengeCharacterDesign"
+            android:name=".randomChallgenges.ChallengeCharacterDesign"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ChallengeLandscape"
+            android:name=".randomChallgenges.ChallengeLandscape"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ChallengeNavigation"
+            android:name=".randomChallgenges.ChallengeNavigation"
             android:screenOrientation="portrait" />
         <activity
             android:name=".user_account_settings.Password_Update"
