set all activities orientation to landscape

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.6001CEM_ArtApp">
-        <activity android:name=".randomChallgenges.ChallengeColours"></activity>
-        <activity android:name=".social_media.ShareAllArtworkViewAllPosts" />
-        <activity android:name=".social_media.ShareAllArtworkMain" />
-        <activity android:name=".social_media.DailyChallengePostDetails" />
+        android:theme="@style/Theme.6001CEM_ArtApp"
+        >
+        <activity android:name=".randomChallgenges.ChallengeColours"
+            android:screenOrientation="portrait" />
+        <activity android:name=".social_media.ShareAllArtworkViewAllPosts"
+            android:screenOrientation="portrait" />
+        <activity android:name=".social_media.ShareAllArtworkMain"
+            android:screenOrientation="portrait" />
+        <activity android:name=".social_media.DailyChallengePostDetails"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".UserGuides"
             android:screenOrientation="portrait" />
