--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_draw_round"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_draw_round"
+        android:icon="@drawable/ic_launcher_new"
+        android:label="DSArt"
+        android:roundIcon="@drawable/ic_launcher_new"
         android:supportsRtl="true"
         android:theme="@style/Theme.6001CEM_ArtApp"
         >
