--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,16 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'com.google.truth:truth:1.1.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+
     implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
     implementation 'com.google.firebase:firebase-installations:16.3.5'
 
